using generic underline class to add a border-bottom

--- a/vcweb/static/css/lighterprints/style.css
+++ b/vcweb/static/css/lighterprints/style.css
@@ -120,7 +120,7 @@ div.lighterprints-scoreboard h5 {
     font-weight: normal;
     color: #41555d;
 }
-.challenges-section {
+.underline {
     border-bottom: 1px solid #CCC;
 }
 .group-level {
