--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -72,7 +72,7 @@
                     <div class='lighterprints-scoreboard-xlarge'><span data-bind='text:hoursLeft'></span>h <span data-bind='text:minutesLeft'></span>m</div>
                 </div>
             </div>
-            <h3 class='challenges-section'>Challenges</h3>
+            <h3 class='underline'>Challenges</h3>
             <div class='tabbable'>
                 <ul class='nav nav-tabs'>
                     <li class='active'><a href='#unlocked-challenges' data-toggle='tab'><i class='icon-star text-warning'></i> Unlocked</a></li>
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class='tab-pane' id='challenges'>
-            <h2 class='challenges-section'>All Challenges</h2>
+            <h2 class='underline'>All Challenges</h2>
             <p>
             Challenges are divided up into 3 levels.  In order to unlock the next level's challenges your group must earn
             enough points so that the <strong>average number of points</strong> per participant is greater than
@@ -99,7 +99,7 @@
             Some challenges are available all day, and others are only available at <strong>certain hours</strong>.
             </p>
             <div data-bind='foreach: activitiesByLevel'>
-                <h3 class='challenges-section'>Level <span data-bind='text: $index() + 1'></span></h3>
+                <h3 class='underline'>Level <span data-bind='text: $index() + 1'></span></h3>
                 <div data-bind='template: { name: "challenges-template", data: { challenges: $data } }'></div>
             </div>
         </div>
@@ -153,7 +153,7 @@
         </div>
         <div class='tab-pane' id='team'>
             <h1 class='dashboard-header'><i class='icon-comment'></i> My Team</h3>
-            <h3>Team Chat</h3>
+            <h3 class='underline'>Team Chat</h3>
             <form id='chat-form' data-bind='submit: submitChatMessage'>
                 <div class='input-prepend'>
                     <span class='add-on'><i class='icon-comment'></i></span>
@@ -178,7 +178,7 @@
                     </div>
                 </div>
             </div>
-            <h3>Recent activity</h3>
+            <h3 class='underline'>Team activity</h3>
             <div data-bind='foreach: groupActivity' class='scrollable-messages'>
                 <div class='alert alert-info'>
                     <span data-bind='text: participant_name'></span> performed <span data-bind='text: display_name'></span>,
