setting background color to light gray with a white sidebar setting expired challenge text to red setting sidebar to white extended by using filler attributes

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -66,7 +66,7 @@
     </div>
 </div>
 {% endblock %}
-<div class='container'>
+<div class='container fill'>
     <noscript>
         <div class='alert alert-error alert-block'>
             <p>Please <b>enable JavaScript</b> before using this site.
@@ -89,7 +89,7 @@
             {% block content %}
             {% endblock %}
         </div>
-        <div class='sidebar span3'>
+        <div class='span3 filler sidebar'>
             {% block sidebar %}
             {% endblock %}
         </div>
