--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Open Sans', sans-serif; 
     padding-top: 50px;
+    height: 100%;
 }
 a.external {
     background: url(../images/external.png) center right no-repeat;
@@ -80,7 +81,24 @@ li.pull-right {
     overflow: auto;
 }
 .left-divider {
-    padding-left: 1.1em;
+    padding-left: 20px;
     border-left: 1px solid #CCC;
-    height: 130px;
+    height: 125px;
+}
+.underline {
+    border-bottom: 1px solid #CCC;
+}
+.fill {
+    min-height: 100%;
+    position: relative;
+}
+.filler::after {
+    background-color: inherit;
+    bottom: 0;
+    content: "";
+    right: 0;
+    position: absolute;
+    top: 0;
+    width: inherit;
+    z-index: -1; 
 }
