creating challenge-tabs wrapper class so the dashboard header doesn't get styled like the challenge tabs

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <h3 class='underline'>Challenges</h3>
-            <div class='tabbable'>
+            <div class='tabbable challenge-tabs'>
                 <ul class='nav nav-tabs'>
                     <li class='active'><a href='#unlocked-challenges' data-toggle='tab'><span class='text-gold'><i class='icon-star'></i> Unlocked</span></a></li>
                     <li><a href='#locked-challenges' data-toggle='tab'><i class='icon-lock'></i> Locked</a></li>
