--- a/vcweb/static/css/lighterprints/style.css
+++ b/vcweb/static/css/lighterprints/style.css
@@ -62,7 +62,7 @@ a.perform-challenge,a.completed-challenge {
     border-color: #59c114 #59c114 hsl(96, 81%, 40.5%);
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.09);
 }
-h1.dashboard-header {
+h1.header {
     font-family:"Open Sans";
     font-size:1.8em;
     font-weight: normal;
@@ -140,4 +140,7 @@ div.lighterprints-scoreboard h5 {
 .group-level {
     margin-top: -15px;
     vertical-align: top;
+}
+h3.underline {
+    font-weight: normal;
 }
