--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -105,7 +105,7 @@
             </div>
             <div data-bind='foreach: activitiesByLevel'>
                 <h3 class='underline'>Level <span data-bind='text: $index() + 1'></span></h3>
-                <div data-bind='template: { name: "challenges-template", data: { challenges: $data } }'></div>
+                <div style='margin-top: -10px;' class='challenges' data-bind='template: { name: "challenges-template", data: { challenges: $data } }'></div>
             </div>
         </div>
         <div class='tab-pane' id='help'>
@@ -164,15 +164,14 @@
         <div class='tab-pane' id='team'>
             <h1 class='header'><i class='icon-comment'></i> My Team</h1>
             <h3 class='underline'>Team Chat</h3>
-            <form id='chat-form' data-bind='submit: submitChatMessage'>
-                <div class='input-prepend'>
+            <form class='form-inline' id='chat-form' data-bind='submit: submitChatMessage'>
+                <div style='width: 90%;' class='input-prepend'>
                     <span class='add-on'><i class='icon-comment'></i></span>
-                    <input style='width: 90%;' type='text' id='chatText' name='message' placeholder='Send a message' />
+                    <input style='width: 90%;' type='text' id='chatText' name='message' placeholder='Send a message to your group' />
                 </div>
+                <button class='btn btn-lighterprints-blue' data-bind='click: submitChatMessage'>Send</button>
                 <input type='hidden' name='participant_group_id' value='{{participant_group_relationship.id}}'/>
-                <button class='btn btn-primary' data-bind='click: submitChatMessage'>Send</button>
             </form>
-
             <div id='chat-div' class='scrollable-messages'>
                 <div data-bind='ifnot: hasChatMessages() '>
                     <div class='alert alert-warning'>
