--- a/vcweb/static/css/lighterprints/style.css
+++ b/vcweb/static/css/lighterprints/style.css
@@ -120,6 +120,22 @@ div.lighterprints-scoreboard h5 {
 .lighterprints-green {
     color: #95CB29;
 }
+.btn-lighterprints-blue {
+  background-color: hsl(197, 89%, 37%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#39bef3", endColorstr="#0a82b2");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#39bef3), to(#0a82b2));
+  background-image: -moz-linear-gradient(top, #39bef3, #0a82b2);
+  background-image: -ms-linear-gradient(top, #39bef3, #0a82b2);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #39bef3), color-stop(100%, #0a82b2));
+  background-image: -webkit-linear-gradient(top, #39bef3, #0a82b2);
+  background-image: -o-linear-gradient(top, #39bef3, #0a82b2);
+  background-image: linear-gradient(#39bef3, #0a82b2);
+  border-color: #0a82b2 #0a82b2 hsl(197, 89%, 31.5%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.36);
+  -webkit-font-smoothing: antialiased;
+}
 .lighterprints-blue {
     color: #13a5e6;
 }
