adding entypo fonts, removing defunct guarantee css from freecsstemplates

--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -102,3 +102,7 @@ li.pull-right {
     width: inherit;
     z-index: -1; 
 }
+@font-face {
+    font-family: Entypo;
+    src: url('../fonts/entypo.eot'), url('../fonts/entypo.woff'), url('../fonts/entypo.ttf'), url('../fonts/entypo.svg');
+}
